Name: pine
Category: Language
Version: 0.1.1
Maintainer: h.kofigumbs@gmail.com
Synopsis: Elm, for the Erlang VM
Description: Elm, for the Erlang VM.

Extra-Source-Files:
  README.md

License: BSD3
License-File: LICENSE

Cabal-Version: >=1.9
Build-Type: Simple

Bug-Reports: https://github.com/hkgumbs/pine-lang/issues
Homepage: https://github.com/hkgumbs/pine-lang#readme
Source-Repository head
    type:     git
    location: git://github.com/hkgumbs/pine-lang.git

Executable pine
    main-is: Main.hs
    other-modules:
      AST.Declaration
      AST.Effects
      AST.Expression.Canonical
      AST.Expression.General
      AST.Expression.Optimized
      AST.Expression.Source
      AST.Expression.Valid
      AST.Helpers
      AST.Literal
      AST.Module
      AST.Module.Name
      AST.Pattern
      AST.Type
      AST.Variable
      Canonicalize
      Canonicalize.Body
      Canonicalize.Effects
      Canonicalize.Environment
      Canonicalize.Setup
      Canonicalize.Sort
      Canonicalize.Type
      Canonicalize.Variable
      Compile
      Docs.AST
      Docs.Centralize
      Docs.Check
      Elm.Compiler.Imports
      Elm.Compiler.Module
      Elm.Compiler.Type
      Elm.Compiler.Type.Extract
      Elm.Compiler.Version
      Elm.Docs
      Elm.Package
      Elm.Utils
      Generate.Beam
      Generate.Beam.BuiltIn
      Generate.Environment
      Generate.JavaScript.Helpers
      Generate.JavaScript.Variable
      Nitpick.Pattern
      Nitpick.PatternMatches
      Nitpick.TopLevelTypes
      Optimize
      Optimize.Case
      Optimize.DecisionTree
      Optimize.Environment
      Optimize.Inline
      Parse.Binop
      Parse.Declaration
      Parse.Expression
      Parse.Helpers
      Parse.Literal
      Parse.Module
      Parse.Parse
      Parse.Pattern
      Parse.Type
      Pine.Compiler
      Pine.Core
      Reporting.Annotation
      Reporting.Bag
      Reporting.Error
      Reporting.Error.Canonicalize
      Reporting.Error.Docs
      Reporting.Error.Helpers
      Reporting.Error.Pattern
      Reporting.Error.Syntax
      Reporting.Error.Type
      Reporting.Region
      Reporting.Render.Code
      Reporting.Render.Type
      Reporting.Report
      Reporting.Result
      Reporting.Warning
      Type.Constrain.Effects
      Type.Constrain.Expression
      Type.Constrain.Literal
      Type.Constrain.Pattern
      Type.Environment
      Type.Inference
      Type.Solve
      Type.State
      Type.Type
      Type.Unify
      Validate
      Paths_elm_compiler
      Paths_pine
    hs-source-dirs: src, elm-compiler/src
    build-depends: aeson,
                   aeson-pretty,
                   ansi-terminal,
                   ansi-wl-pprint,
                   base,
                   binary,
                   bytestring,
                   containers,
                   codec-beam,
                   directory,
                   edit-distance,
                   filepath,
                   indents,
                   language-ecmascript,
                   language-glsl,
                   mtl,
                   parsec,
                   pretty,
                   process,
                   text,
                   union-find
